# monte-carlo-dq

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/samples/: generate_seed_data.py
docker/: Dockerfile
notebooks/: exploration.ipynb
src/: __init__.py  config.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  health.py  quality.py
src/core/: __init__.py  detectors.py  profiler.py  simulation.py
src/db/: __init__.py  connection.py
src/models/: __init__.py  schemas.py
tests/: test_api.py  test_detectors.py  test_profiler.py  test_simulation.py
